# Speechifiy

./: Readme.md  pyproject.toml
speachifiy/: __main__.py
speachifiy/speach/: audioinput.py
speachifiy/utils/: ConsoleLog.py  const.py
