[tool.poetry]
name = "speechifiy"
version = "0.1.0"
description = ""
authors = ["Nick Blackburn <nickblackburn02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
colorama = "^0.4.5"
PyAudio = "^0.2.12"
librosa = "^0.9.2"
ipython = "^8.4.0"
pydub = "^0.25.1"
sounddevice = "^0.4.5"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
